code/tui/snapshots/fullscreen/marketplace/marketplace_chinese_review.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                       [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 检 查 软 件 包  · Skills ──────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │> 取 消   ·  返 回 ， 不 更 改 安 装                                               │             
            │  web@official                                                           │             
            │  版 本  2.0.0 · 许 可 证  MIT                                                │             
            │  来 源 ： 官 方                                                              │             
            │  Available · {0}                                                        │             
            │  技 能  · web-guide                                                       │             
            │    权 限 ： 未 声 明                                                          │             
            │  可 执 行 程 序  · web-lsp                                                   │             
            │    权 限 ： process.spawn                                                  │             
            │    权 限 ： network:example.test                                           │             
            │  确 认 安 装 整 个 包   ·  列 出 的 所 有 能 力 将 一 起 安 装                             │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > 构 建 任 何 内 容                                                                                     
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                                    
  Enter 确 认   ·  Esc 关 闭
