code/tui/snapshots/fullscreen/marketplace/marketplace_chinese_tabs.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                       [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 扩 展  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   技 能     扩 展 市 场     MCP    钩 子     插 件                                │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 已 安 装 插 件                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  此 页 暂 无 软 件 包                                                          │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > 构 建 任 何 内 容                                                                                     
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                                    
  Tab/Shift+Tab 切 换  · Enter 返 回  · Esc 关 闭
