code/tui/snapshots/fullscreen/marketplace/marketplace_expanded_package.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                       [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 扩 展  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   技 能     扩 展 市 场     MCP    钩 子     插 件                                │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 扩 展 市 场 ， 按  Enter 搜 索                                         │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  ash                                                                  - │             
            │  插 件  ───────────────────────────────────────────────────────────────── │             
            │> Guide                                                                - │             
            │    来 源 ： ash                                                            │             
            │    描 述 ： Search guide                                                   │             
            │    版 本 ： 2.0.0                                                          │             
            │  official                                                             - │             
            │  插 件  ───────────────────────────────────────────────────────────────── │             
            │  Web tools                                                            + │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > 构 建 任 何 内 容                                                                                     
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                                    
  / 搜 索  · ←/→ 详 情  · i 安 装  · r 刷 新
