code/tui/snapshots/fullscreen/marketplace/marketplace_sources_expanded.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Extensions ───────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Skills    Marketplace    MCP    Hooks    Plugins                      │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search Marketplace; Enter to search                                │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> ash                                                                  - │             
            │  Skills ─────────────────────────────────────────────────────────────── │             
            │  Guide                                                                + │             
            │  claude-plugins-official                                              - │             
            │  Plugins ────────────────────────────────────────────────────────────── │             
            │  Tools                                                                + │             
            │  openai                                                               - │             
            │  Skills ─────────────────────────────────────────────────────────────── │             
            │  Review                                                               + │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  / search · ←/→ details · i install · r refresh
