code/tui/snapshots/fullscreen/marketplace/marketplace_whole_package_review.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Review package · Web tools ───────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │> Cancel  ·  Return without changing installations                       │             
            │  web@official                                                           │             
            │  Version 2.0.0 · License MIT                                            │             
            │  Source: official                                                       │             
            │  Language server and skill bundle                                       │             
            │  Skills · web-guide                                                     │             
            │    Permissions: none declared                                           │             
            │  Executables · web-lsp                                                  │             
            │    Permission: process.spawn                                            │             
            │    Permission: network:example.test                                     │             
            │  Confirm whole-package installation  ·  All listed capabilities are ins │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            └─────────────────────────────────────────────────────────────────────────┘             
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter to confirm  ·  Esc to close
